--- a/app/src/main/res/drawable/ic_man_white.xml
+++ b/app/src/main/res/drawable/ic_man_white.xml
@@ -1,7 +1,8 @@
-<vector android:height="45dp" android:viewportHeight="393.739"
-    android:viewportWidth="393.739"
-    android:width="45dp"
+<vector android:height="50dp" android:viewportHeight="297.0"
+    android:viewportWidth="297.0" android:width="50dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/lightGray"
-        android:pathData="M370.9,0h-93c-9.1,0 -16.5,7.4 -16.5,16.5c0,9.1 7.4,16.5 16.5,16.5h43.2L217.3,136.7c-21,-12.9 -45.8,-20.3 -72.2,-20.3c-76.5,0 -138.7,62.2 -138.7,138.7c0,76.5 62.2,138.7 138.7,138.7s138.7,-62.2 138.7,-138.7c0,-33.1 -11.7,-63.5 -31,-87.3L354.5,66v49.2c0,9.1 7.4,16.5 16.4,16.5c9.1,0 16.5,-7.4 16.5,-16.5V16.5C387.4,7.4 380,0 370.9,0zM145.1,346.7c-50.5,0 -91.7,-41.1 -91.7,-91.7c0,-50.5 41.1,-91.7 91.7,-91.7c50.5,0 91.7,41.1 91.7,91.7C236.7,305.6 195.6,346.7 145.1,346.7z"/>
+    <path android:fillColor="@color/lightGray" android:pathData="M148.51,117.22c32.32,0 58.61,-26.29 58.61,-58.61S180.83,0 148.51,0c-32.32,0 -58.61,26.29 -58.61,58.61S116.19,117.22 148.51,117.22z"/>
+    <path android:fillColor="@color/lightGray" android:pathData="m227.15,145.62c-0.03,-0.01 -0.07,-0.03 -0.1,-0.03 -7.63,-1.86 -31,-5.13 -31,-5.13 -2.64,-0.81 -5.46,0.58 -6.41,3.19l-35.17,96.51c-2.03,5.57 -9.9,5.57 -11.93,0l-35.17,-96.51c-0.77,-2.1 -2.75,-3.42 -4.88,-3.42 -0.5,0 -24.53,3.37 -32.53,5.36 -21.86,5.43 -35.65,26.93 -35.65,49.33v80.3c0,12.03 9.76,21.79 21.79,21.79h184.78c12.03,0 21.79,-9.76 21.79,-21.79v-80.57c-0,-22.3 -14.33,-42.1 -35.53,-49.02z"/>
+    <path android:fillColor="@color/lightGray" android:pathData="m161.77,138.61c-1.4,-1.53 -3.46,-2.3 -5.53,-2.3h-15.48c-2.08,0 -4.13,0.77 -5.53,2.3 -2.17,2.37 -2.49,5.79 -0.95,8.46l8.28,12.48 -3.88,32.69 7.63,20.3c0.74,2.04 3.63,2.04 4.38,0l7.63,-20.3 -3.88,-32.69 8.28,-12.48c1.54,-2.67 1.23,-6.09 -0.95,-8.46z"/>
 </vector>
+
